[gd_scene load_steps=2 format=3 uid="uid://85gmkurme0q1"]

[ext_resource type="Script" uid="uid://djc70xjrjtn4l" path="res://Interface/lobby.gd" id="1_ll2xe"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ll2xe")
metadata/_edit_horizontal_guides_ = [-52.0]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(164, 75)
layout_mode = 2
text = "Enter server IP address below and press \"Join\"!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ServerIPLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
tooltip_text = "Server IP Address"
placeholder_text = "127.0.0.1:27015"
max_length = 64
emoji_menu_enabled = false

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join!"

[connection signal="text_submitted" from="CenterContainer/VBoxContainer/ServerIPLineEdit" to="." method="_on_server_ip_line_edit_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
